--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ aiohttp==3.9.3
 aiosignal==1.3.1
 annotated-types==0.6.0
 anyio==4.2.0
+async-timeout==4.0.3
+asyncpg==0.29.0
 attrs==23.2.0
 blinker==1.7.0
 Brotli==1.1.0
@@ -14,6 +16,7 @@ click==8.1.7
 colorlog==6.8.2
 ConfigArgParse==1.7
 cryptography==42.0.2
+databases==0.8.0
 fastapi==0.109.2
 Flask==3.0.2
 Flask-Cors==4.0.0
@@ -31,20 +34,24 @@ MarkupSafe==2.1.5
 msgpack==1.0.7
 multidict==6.0.5
 psutil==5.9.8
+psycopg2==2.9.9
 pycares==4.4.0
 pycparser==2.21
 pydantic==2.6.0
 pydantic_core==2.16.1
+python-dotenv==1.0.1
 pyzmq==25.1.2
 redis==5.0.1
 requests==2.31.0
 roundrobin==0.0.4
 six==1.16.0
 sniffio==1.3.0
+SQLAlchemy==1.4.51
 starlette==0.36.3
 typing_extensions==4.9.0
 urllib3==2.2.0
 uvicorn==0.27.0.post1
+websockets==12.0
 Werkzeug==3.0.1
 yarl==1.9.4
 zope.event==5.0
