refactor docker-compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.8'
 
 services:
   app:
@@ -6,7 +6,15 @@ services:
     ports:
       - "8000:8000"
     depends_on:
+      - postgres
       - redis
 
+  postgres:
+    image: postgres
+    ports:
+      - "5432:5432"
+
   redis:
-    image: "redis:alpine"
+    image: redis
+    ports:
+      - "6379:6379"
