--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,11 +10,11 @@ services:
       - redis
 
   postgres:
-    image: postgres
+    image: postgres:alpine
     ports:
       - "5432:5432"
 
   redis:
-    image: redis
+    image: redis:alpine
     ports:
       - "6379:6379"
